...
        ]}
      >
        Welcome back to Leazy
      </Text>

      <CustomTextField
        testID='emailInput'
        placeholder='Email'
        value={email}
        onChangeText={setEmail}
        keyboardType='email-address'
        autoCapitalize='none'
        style={appStyles.signUpInputField}
      />
      {errors.email && (
        <Text style={stylesForNonHeaderScreens.errorText}>{errors.email}</Text>
      )}

      <CustomTextField
        testID='passwordInput'
        placeholder='Password'
        value={password}
        onChangeText={setPassword}
        style={appStyles.signUpInputField}
        secureTextEntry
      />
...
      <SubmitButton
        disabled={false}
        onPress={handleSignIn}
        width={ButtonDimensions.largeButtonWidth}
        height={ButtonDimensions.largeButtonHeight}
        label='Sign in'
        testID='signInButton'
        style={appStyles.submitButton}
        textStyle={appStyles.submitButtonText}
      />

      <Text style={[stylesForNonHeaderScreens.text, {marginTop: "10%"}]}>or</Text>
      <View style={styles.horizontalLine} />
...
