...

  return (
    <View style={styles.container}>
      <Header>
        <ScrollView style={styles.scrollView}>
          <View style={styles.titleContainer}>
            <Text style={styles.title}>Maintenance Requests</Text>
          </View>

          <View style={styles.switchContainer}>
            <Text> Archived Issues</Text>
            <Switch
              style={[{ marginLeft: 8 }, {marginRight: 8}, {marginBottom: 8}, {marginTop: 8}]}
...

          <View style={[styles.viewBoxContainer, {height: 100}]}>
          </View>
        </ScrollView>
      </Header>

      <TouchableOpacity testID="addButton" style={styles.addButton} onPress={() => navigation.navigate('Report')}>
        <Feather name="plus" size={24} color="white" />
      </TouchableOpacity>
    </View>
  );
};

...
