...

        <View style={styles.buttonsContainer}>
          <TouchableOpacity
            onPress={onPress}
            style={[styles.button, styles.shadow]}
          >
            <Text style={styles.buttonText}>Ok</Text>
          </TouchableOpacity>
        </View>
      </View>
    </View>
  );
}
...
