...

export function SituationReportLabel() {
  return (
  <View style={situationReportStyles.layoutCreationSeparationLine}>
    <View style={{ flexDirection: 'row', alignItems: 'center' }}>
      <View style={{ marginBottom: '2%' }}>
        <Text testID='OC-description'>OC = Original Condition </Text>
        <Text testID='NW-description'>NW = Natural Wear</Text>
        <Text testID='AW-description'>AW = Abnormal Wear</Text>
      </View>

      <View style={situationReportStyles.labels}>
        <Text
          testID='OC-tag'
          style={situationReportStyles.wearStatus}
...
              >
                <Text style={appStyles.inputFieldLabel}> Layout Name : </Text>
                <InputField
                  value={situationReportName}
                  setValue={(newName) => setSituationReportName(newName)}
                  placeholder={'Situation Report Name'}
                  testID={'situation-report-name'}
                  height={textInputHeight}
                  width={ButtonDimensions.fullWidthButtonWidth}
                  backgroundColor={Color.TextInputBackground}
                />
              </View>
            </View>
...
                    appStyles.buttonCancel,
                    layoutCreationStyles.layoutModificationButton,
                  ]}
                />

                <Button
                  testID='save-button'
                  title='Save'
                  titleStyle={appStyles.submitButtonText}
                  onPress={() => {
                    const next = filterEmptyElements(tempLayout);
                    setLayout(cloneDeep(next));
                    setEditMode(false);
...
                  ]}
                />
              </View>
            ) : (
              <View style={layoutCreationStyles.editButton}>
                <Button
                  testID='edit-button'
                  title='Edit'
                  titleStyle={appStyles.submitButtonText}
                  onPress={() => {
                    setEditMode(true);
                    setTempLayout(cloneDeep(layout));
                  }}
...
            )}

            {editMode && (
              <View style={layoutCreationStyles.addButtonContainer}>
                <AddItemButton
                  label='Add New Group'
                  testID='add-group-button'
                  buttonStyle={[
                    layoutCreationStyles.addButton,
                    layoutCreationStyles.globalButton,
                  ]}
                  textStyle={[layoutCreationStyles.buttonText]}
                  onPress={() => {
...
                    setTempLayout(nextLayout);
                  }}
                />

                <AddItemButton
                  label='Add New Single Item'
                  testID='add-single-item-button'
                  buttonStyle={[
                    layoutCreationStyles.addButton,
                    layoutCreationStyles.globalButton,
                  ]}
                  textStyle={layoutCreationStyles.buttonText}
                  onPress={() => {
...
                disabled={
                  layout.length === 0 ||
                  situationReportName === '' ||
                  selectedResidence === ''
                }
                label='Submit'
                testID='submit-button'
                width={ButtonDimensions.mediumButtonWidth}
                height={ButtonDimensions.mediumButtonHeight}
                style={appStyles.submitButton}
                textStyle={appStyles.submitButtonText}
                onPress={async () => {
                  try{
...
                    const layoutList: string[] = residence?.situationReportLayout?? [];
                    layoutList.push(layoutRef);
                    
                    await updateResidence(selectedResidence, { situationReportLayout: layoutList });
                   
                    Alert.alert(
                      'Situation Report Creation',
                      'Situation Report has been created successfully',
                    );
                    resetStates();
                  } catch (error){
                    Alert.alert(
                      'Situation Report Creation ',
                      'An error occurred while creating the situation report please verify your connection and try again',
...
