...
          </Text>
          <Text style={styles.label}>
            Are you renting or the manager of a property?
          </Text>

          <CustomPicker
            testID='userTypePicker'
            selectedValue={userType}
            onValueChange={(itemValue) => setUserType(itemValue)}
          />

          <Text style={styles.label}> Choose an email and a password</Text>

          <CustomTextField
            testID='emailInput'
            placeholder='Email'
            value={email}
            onChangeText={setEmail}
            keyboardType='email-address'
            autoCapitalize='none'
            style={appStyles.signUpInputField}
...
            <Text style={stylesForNonHeaderScreens.errorText}>
              {errors.email}
            </Text>
          )}

          <CustomTextField
            testID='passwordInput'
            placeholder='Password'
            value={password}
            onChangeText={setPassword}
            secureTextEntry
            style={appStyles.signUpInputField}
          />
...
            <Text style={stylesForNonHeaderScreens.errorText}>
              {errors.password}
            </Text>
          )}

          <CustomTextField
            testID='confirmPasswordInput'
            placeholder='Confirm Password'
            value={confirmPassword}
            onChangeText={setConfirmPassword}
            style={appStyles.signUpInputField}
            secureTextEntry
          />
...
            <Text style={stylesForNonHeaderScreens.errorText}>
              {errors.confirmPassword}
            </Text>
          )}

          <SubmitButton
            testID='signUpButton'
            disabled={false}
            onPress={handleSignUpPress}
            width={ButtonDimensions.largeButtonWidth}
            height={ButtonDimensions.largeButtonHeight}
            label='Sign up'
            style={appStyles.submitButton}
...
