appId: "com.leazy.swent"
---
- launchApp:
    clearState: true

- tapOn:
    id: "signUpButton"

- tapOn:
    id: "userTypePicker"

- tapOn: "Tenant Horizontal scroll bar, 1 page Unauthenticated Landlord Tenant Horizontal scroll bar, 1 page Unauthenticated Landlord Tenant Landlord Tenant Horizontal scroll bar, 1 page"

- tapOn:
    id: "emailInput"
- inputText: "test-e2e-tenant@test.com"
- hideKeyboard

- tapOn:
    id: "passwordInput"
- inputText: "test-e2e-tenant"
- hideKeyboard

- tapOn:
    id: "confirmPasswordInput"
- inputText: "test-e2e-tenant"
- hideKeyboard

- tapOn:
    id: "signUpButton"

- tapOn:
    id: "testFirstNameField"
- inputText: "Test Tenant"
- hideKeyboard

- tapOn:
    id: "testLastNameField"
- inputText: "E2E Tenant"
- hideKeyboard

- tapOn:
    id: "testAddressField"
- inputText: "Test Address"
- hideKeyboard

- tapOn:
    id: "testZipField"
- inputText: "12345"
- hideKeyboard

- tapOn:
    id: "testCityField"
- inputText: "Test City"
- hideKeyboard

- tapOn:
    id: "testProvinceField"
- inputText: "Test Province"
- hideKeyboard

- tapOn:
    id: "testNumberField"
- inputText: "123"
- hideKeyboard

- tapOn:
    id: "testPhoneField"
- inputText: "1234567890"
- hideKeyboard

- tapOn:
    id: "testGenreField"
- tapOn: "Male"

- tapOn:
    id: "testCountryField"
- tapOn: "Canada"

- tapOn:
    id: "submitButton"
